# devops-playground

./: .gitignore  README.md
ansible-prac/: README.md  install_java_sdkman.yml  inventory  main.py  playbook-01.yml  pyproject.toml
custom-jenkins/: README.md  docker-compose.yml
k8s-practice/first-attempt/: helloworld-nodeport-service.yml  helloworld-pod.yml
shell-scripts/: git-script.sh  setup.sh
