[project]
name = "ansible-prac"
version = "0.1.0"
description = ""
authors = [
    {name = "fuadashraful16",email = "fuadashraful16@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible (>=11.3.0,<12.0.0)"
]

[tool.poetry]
packages = [{include = "ansible_prac", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
